@@ -1,0 +1,26 @@
+DECL|class|QMessageAuthenticationCodePrivate
+DECL|function|QMessageAuthenticationCode
+DECL|function|QMessageAuthenticationCodePrivate
+DECL|function|addData
+DECL|function|addData
+DECL|function|addData
+DECL|function|hash
+DECL|function|initMessageHash
+DECL|function|qt_hash_block_size
+DECL|function|reset
+DECL|function|result
+DECL|function|setKey
+DECL|function|~QMessageAuthenticationCode
+DECL|macro|int_least16_t
+DECL|macro|int_least16_t
+DECL|macro|uint32_t
+DECL|macro|uint32_t
+DECL|macro|uint64_t
+DECL|macro|uint64_t
+DECL|macro|uint68_t
+DECL|macro|uint8_t
+DECL|member|key
+DECL|member|messageHash
+DECL|member|messageHashInited
+DECL|member|method
+DECL|member|result
